--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <a href="./links/movies.html">Movies</a>
  
     <h1>HOME</h1>
-    <img src="./IMG/1024px-Gnome-home.svg.png" alt="">
+    <img src="./IMG/1024px-Gnome-home.svg.png" alt="Home-page">
     
 </body>
 </html>
