--- a/Pages/books.html
+++ b/Pages/books.html
@@ -5,26 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        li {
-             padding-bottom: 5px;
-             margin: 5px;
-         }
-     </style>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
+     <div class="header">
+        <h2 class="logo"><a href="../index.html"><img src="../Images/logo.png" alt="logo"></a>
+            <p>Dark Paradox</p>
+        </h2>
+       <div class="pages">
+         <a href="../index.html">Home</a>
+         <a href="./hobi.html">Hobbies</a>
+         <a href="./movies.html">Movies</a>
+       </div>
+     </div>
 
-    <a href="../index.html">Home</a>
-    <a href="./about.html">About</a>
-    <a href="./hobi.html">Hobbies</a>
-    <a href="./movies.html">Movies</a>
+    <h1 class="h1-books">Books</h1>
 
-    <h1>Books</h1>
-
-    <ol>
-        <li><a href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)">The Alchemist </a></li>
-        <li><a href="https://en.wikipedia.org/wiki/The_Kybalion">The Kybalion</a></li>
+    <ol class="container-books">
+        <li>
+            <img src="../Images/alchemist.png" alt="alchemist">
+            <button><a href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)">The Alchemist</a>
+            </button>
+        </li>
+        <li>
+            <img src="../Images/kabelion.png" alt="kabelion">
+            <button>
+                <a href="https://en.wikipedia.org/wiki/The_Kybalion">The Kybalion</a>
+            </button>
+        </li>
     </ol>
+
+    <!--Footer-->
+    <div class="footer-pages">
+        <p>© 2022 Dark Paradox</p>
+    </div>
     
 </body>
 </html>
