--- a/Pages/hobi.html
+++ b/Pages/hobi.html
@@ -5,28 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        li {
-             padding-bottom: 5px;
-             margin: 5px;
-         }
-     </style>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
+     <div class="header">
+        <h2 class="logo"><a href="../index.html"><img src="../Images/logo.png" alt="logo"></a>
+            <p>Dark Paradox</p>
+        </h2>
+        <div class="pages">
+           <a href="../index.html">Home</a>
+           <a href="./books.html">Books</a>
+           <a href="./movies.html">Movies</a>
+        </div>
+     </div>
 
+    <h1 class="h1-hobbies">Hobbies</h1>
 
-    <a href="../index.html">Home</a>
-    <a href="./books.html">Books</a>
-    <a href="./about.html">About</a>
-    <a href="./movies.html">Movies</a>
-
-    <h1>Hobbies</h1>
-
-    <ul>
-        <li><a href="https://blog.landr.com/music-production/">Music Production</a></li>
-        <li>Astronomy</li>
-        <li>Reading</li>
+    <ul class="container-hobbies">
+        <li>
+            <h4>Music Production</h4>
+            <h2>*</h2>
+            <p>
+                Music production is the process of developing, creating and refining recorded music for public presentation. Music production can refer to the entire lifecycle of a piece of music—from songwriting and composition to recording and sound design to mixing and mastering.
+            </p>
+        </li>
+        <li>
+            <h4>Astronomy</h4>
+            <h2>*</h2>
+            <p>
+                Astronomy is a natural science that studies celestial objects and phenomena. It uses mathematics, physics, and chemistry in order to explain their origin and evolution. Objects of interest include planets, moons, stars, nebulae, galaxies, and comets. 
+            </p>
+        </li>
+        <li>
+            <h4>Reading</h4>
+            <h2>*</h2>
+            <p>
+                What Are the Benefits of Reading Books? · Gain valuable knowledge · Exercise your brain · Improve your focus · Improve your memory · Enjoy ...
+            </p>
+        </li>
+        <li>
+            <h4>Walking</h4>
+            <h2>*</h2>
+            <p>
+                Walking (also known as ambulation) is one of the main gaits of terrestrial locomotion among legged animals. Walking is typically slower than running and other gaits. Walking is defined by an 'inverted pendulum' gait in which the body vaults over the stiff limb or limbs with each step. This applies regardless of the usable number of limbs—even arthropods, with six, eight, or more limbs, walk.
+            </p>
+        </li>
+        <li>
+            <h4>Cycling</h4>
+            <h2>*</h2>
+            <p class="cycling">
+                Riding a bike is healthy, fun and a low-impact form of exercise for all ages. Cycling is easy to fit into your daily routine by riding to the shops, park, ...
+            </p>
+        </li>
     </ul>
+
+     <!--Footer-->
+     <div class="footer-pages">
+        <p>© 2022 Dark Paradox</p>
+    </div>
     
 </body>
 </html>
