--- a/index.html
+++ b/index.html
@@ -5,26 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentation</title>
-    <style>
-        li {
-             padding-bottom: 5px;
-             margin: 5px;
-         }
-         img {
-             width: 400px;
-             margin-left: 400px;
-         }
-     </style>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+    <!--  Header section -->
+     <div class="header">
+        <h2 class="logo"><a href="./index.html"><img src="./Images/logo.png" alt="logo"></a>
+            <p>Dark Paradox</p>
+        </h2>
+        <div class="pages">
+          <a href="./Pages/books.html">Books</a>
+          <a href="./Pages/hobi.html">Hobbies</a>
+          <a href="./Pages/movies.html">Movies</a>
+        </div>
+     </div>
+     <!-- Bio  section -->
+     <div id="bio">
+        <div class="side-1">
+          <h1 class="heading">something about me!</h1>
+          <p>
+               Behind <b>Dark Paradox</b> is Miljan Jankovic. He comes from a family of musicians , so as a child he showed an interest in music.
+               In 1996 he made his first contact with Psytrance music and since then the relationship has not stopped but has become stronger and stronger .
+          </p> 
+            <br>     
+          <p>
+               In 2002 ,he decided to become a DJ. And then the name Distant Galaxy was born.
+               He started playing in clubs  and parties all over Serbia , he also playing in <i>Montenegro, Macedonia, Bosnia, Romania …</i>   
+          </p> 
+            <br>   
+          <p>
+               After few years he decided to research music production .
+               Now he is on the way to finish his first releases under the name <b>Dark Paradox</b>.
+          </p>
+          <a href="https://www.instagram.com/nightblade_music/" target="_blank"><button>...More</button></a>
+        </div>
+        <div class="side-2">
+            <img src="./Images/music-production.png" alt="Home-page">
+        </div>
+     </div>
+     <!--  Random section -->
+     <div class="random_stuff">
+         <div>
+            <h2>Something interesting for me!</h2>
+         </div>         
+         <div class="random-info">      
+            <div class="card">
+                <div class="card-img"">
+                    <img src="./Images/me-like-dj.png" alt="Dj-ing">
+                </div>
+                <div class="paragraph">
+                    <p>There is no words to describe happines when you are doing somethin that you love!🖤</p>
+                </div>
+            </div>
+            <div class="card">
+               <div class="card-img">
+                    <img src="./Images/festival.png" alt="my-dog">
+               </div>
+               <div class="paragraph">
+                    <p>The festival that i like to visit every year,is Ozora!</p>
+               </div>
+            </div>
+            <div class="card">
+               <div class="card-img">
+                    <img src="./Images/energy-sources.png" alt="source">
+               </div>
+               <div class="paragraph">
+                    <p>Visiting mountains for me it's mean to charge my body with positive energy!</p>
+               </div>
+            </div>
+            <div class="card">
+               <div class="card-img">
+                    <img src="./Images/codiranje.png" alt="JS">
+               </div>
+               <div class="paragraph">
+                    <p>Something else that I like to do alot!</p>
+               </div>
+            </div>
+         </div>
+     </div>
 
-    <a href="./links/books.html">Books</a>
-    <a href="./links/about.html">About</a>
-    <a href="./links/hobi.html">Hobbies</a>
-    <a href="./links/movies.html">Movies</a>
- 
-    <h1>HOME</h1>
-    <img src="./IMG/1024px-Gnome-home.svg.png" alt="Home-page">
+     <!--Section inspiring quote-->
+     <div class="inspiring">
+         <p class="inspiring-p-1">This is an inspiring quote, or a testimonial from a<br/> customer. Maybe it's just filing up space, or maybe <br/>people will actually read it. Who knows?  <br/> All Iknow is that it looks nice.</p>
+         <span class="position_bottom-right">
+            <p class="inspiring-p-2">-Thor</p>
+         </span>
+     </div>
+     <!--Sign up button-->
+     <div class="container-button">
+         <div class="container_text">
+             <h4>Call to action! It's time!</h4>
+             <p class="container_text-content">Sing up for our products by clicking that button right over there!</p>
+         </div>
+         <div class="container_button-content">
+             <button>Sign up</button>
+         </div>
+     </div>
+
+     <!--Footer-->
+     <div class="footer">
+         <p>© 2022 Dark Paradox</p>
+     </div>
+   
     
 </body>
 </html>
